--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,15 @@ version: '3.8'
 
 services:
   email-processor:
-    image: your-dockerhub-username/email-processor:latest
-    build:
-      context: .
+    build: .
     container_name: email_processor
     volumes:
       - .:/app
     environment:
       - IMAP_SERVER=imap.your-email-provider.com
       - SMTP_SERVER=smtp.your-email-provider.com
-      - EMAIL=your-email@example.com
-      - PASSWORD=your-password
+      - EMAIL=${EMAIL}
+      - PASSWORD=${PASSWORD}
     networks:
       - email_network
 
