--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,28 @@
 version: '3.8'
 
 services:
-  email-processor:
-    build: .
-    container_name: email_processor
+  web:
+    image: python:3.9-slim
+    container_name: spotify_flask_app
+    working_dir: /app
     volumes:
-      - .:/app
+      - ./app:/app
+    command: ["python", "app.py"]
+    ports:
+      - "5000:5000"
     environment:
-      - IMAP_SERVER=imap.your-email-provider.com
-      - SMTP_SERVER=smtp.your-email-provider.com
-      - EMAIL=${EMAIL}
-      - PASSWORD=${PASSWORD}
-    networks:
-      - email_network
+      - SPOTIPY_REDIRECT_URI=http://localhost:5000/callback
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx_server
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "80:80"
+    depends_on:
+      - web
 
 networks:
-  email_network:
+  default:
     driver: bridge
