--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,13 @@ services:
       - ./app:/app
     command: [ "python", "app.py" ]
     ports:
-      - "5001:5000"
-    environment:
-      - SPOTIPY_REDIRECT_URI=http://localhost:5000/callback
+      - "5001:5000" # Changed port
 
   nginx:
     image: nginx:latest
     container_name: nginx_server
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro # Ensure this file exists
     ports:
       - "80:80"
     depends_on:
