--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,15 @@ services:
     working_dir: /app
     volumes:
       - ./app:/app
-    command: [ "python", "app.py" ]
+    command: ["python", "app.py"]
     ports:
-      - "5001:5000" # Changed port
+      - "5001:5000"  # Changed port
 
   nginx:
     image: nginx:latest
     container_name: nginx_server
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro # Ensure this file exists
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - "80:80"
     depends_on:
