--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     image: nginx:latest
     container_name: nginx_server
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/app/nginx.conf:ro
     ports:
       - "80:80"
     depends_on:
