--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     working_dir: /app
     volumes:
       - ./app:/app
-    command: [ "python", "app.py" ]
+    command: [ "python", "/app/app.py" ]
     ports:
       - "5001:5000" # Changed port
 
